--- a/generator/layouts/_footer_section.html.erb
+++ b/generator/layouts/_footer_section.html.erb
@@ -7,12 +7,9 @@
                 Built with
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
                 <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a>,
-                <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a> &amp;
-                <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a>
-                <br />
-                Assets from <a rel="nofollow" target="_blank" href="//openstreetmap.org">OpenStreetMap</a>,
-                <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a> &amp;
-                <a rel="nofollow" target="_blank" href="//modernpictograms.com">Modern Pictograms</a>
+                <a rel="nofollow" target="_blank" href="//github.com/Prinzhorn/skrollr">Skrollr</a>,
+                <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a> &amp;
+                <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a>
             </small></p>
         </div>
     </div>
