--- a/generator/layouts/_location_section.html.erb
+++ b/generator/layouts/_location_section.html.erb
@@ -1,17 +1,23 @@
 <section id="location" class="feature">
-    <div class="row">
+    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
         <h2>Location</h2>
+    </div>
 
-        <div id="address">
-            <h6>
-                ThoughtWorks Technologies Pvt Ltd<br />
-                9th Floor, Phase 3 <br />
-                Ascendas International Tech Park <br />
-                Taramani, Chennai <br />
-                <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small>
-            </h6>
+    <div class="row">
+        <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
+            <p>
+                <span>ThoughtWorks Technologies Pvt Ltd</span>
+                <span>9th Floor, Phase 3</span>
+                <span>Ascendas Tech Park</span>
+                <span>Taramani, Chennai</span>
+                <span><small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+            </p>
+        </div>
+
+        <div class="large-8 columns map" data-anchor-target=".address" data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">
+            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">
+                <img src="./img/map.png" alt="Map" align="center" />
+            </a>
         </div>
     </div>
 </section>
-
-<div id="map" class="hide"></div>
