--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -1,5 +1,5 @@
 @charset "UTF-8"
-@import "normalize", "variables", "foundation/components/global", "foundation/components/type", "foundation/components/grid", "foundation/components/block-grid", "foundation/components/visibility", "foundation/components/top-bar", "foundation/components/buttons"
+@import "normalize", "variables", "foundation/components/global", "foundation/components/type", "foundation/components/grid", "foundation/components/block-grid", "foundation/components/visibility", "foundation/components/top-bar", "foundation/components/buttons", "animate"
 
 body
   padding-top: $topbar-height
@@ -11,10 +11,11 @@ body
 @media only screen and (max-width:#{$small-screen})
   body
     font-size: 112.5%
+    padding-top: 0
 
-@mixin override-colors($main-fg,$main-bg)
+=override-colors($main-fg,$main-bg)
   color: $main-fg
-  background: $main-bg url(../img/white-bg.png) fixed
+  background: $main-bg url(../img/white-bg.png)
 
   h1, h2, h3, h4, h5, h6, .subheader, p, blockquote, a, small
     color: $main-fg
@@ -28,6 +29,7 @@ body
 .feature
   padding: 1em 0 2em 0
   position: relative
+  overflow: hidden
 
   .row
     margin-bottom: 1em
@@ -40,6 +42,9 @@ body
 
   .fixed
     opacity: .75
+
+    @media only screen and (max-width:#{$small-screen})
+      display: none
 
     .name h1 a
       width: auto
@@ -57,12 +62,25 @@ body
   $main-bg: $white
   $alt-fg: $blue
   @include override-colors($main-fg,$main-bg)
+  border-radius: 0
+  margin-top: 0
 
-  img
-    display: block
-    margin: 0 auto
-    width: 14em
-    max-width: 80%
+  .logo
+    img
+      display: block
+      margin: 0 auto
+      width: 14em
+      max-width: 80%
+      +animate(bounceInLeft, 1s, 0s)
+
+    h1
+      +animate(bounceInRight, 1s, 0s)
+
+    h5
+      +animate(fadeInDown, 1s, .5s)
+
+  .countdown .columns
+    +animate(rotateIn, 1s, 1s)
 
   .countdown h4
     color: $alt-fg
@@ -100,10 +118,14 @@ body
     border-top: 1px dashed $main-fg
 
   .actions
+    +animate(bounceIn, 1s, 1.5s)
     padding-top: 1em
 
     a
       display: block
+
+      &:hover
+        +animate(tada, 1s)
 
       h4
         @include single-transition(background-color)
@@ -140,6 +162,10 @@ body
       &:last-child
         border-bottom: 0
 
+      .time,
+      .summary
+        +experimental(transform-origin, 50% 50%)
+
       .summary
         position: relative
 
@@ -158,6 +184,7 @@ body
           margin-bottom: 0
 
         .time
+          +experimental(transform-origin, 100% 50%)
           text-align: right
           p:after
             display: block
@@ -167,6 +194,7 @@ body
             right: -.25em
 
         .summary
+          +experimental(transform-origin, 0% 50%)
           text-align: left
           p
             padding-right: 3.15em
@@ -187,6 +215,22 @@ body
   $main-bg: $dark
   @include override-colors($main-fg,$main-bg)
   background-image: url(../img/dark-bg.jpg)
+
+  .row
+    overflow: hidden
+
+  .address
+    span
+      display: block
+      padding-bottom: .5em
+    a
+      color: $blue
+
+  @media #{$small}
+    .address p
+      text-align: right
+    img
+      border-radius: 0 .5em .5em 0
 
 //
 // ABOUT SECTION
@@ -209,7 +253,19 @@ body
       height: 1.5em
       line-height: 1.5em
       margin: 0 .1em
-      @include single-transition(color)
+      position: relative
+      +experimental(transition, color .3s, background-color .3s)
+
+      &::before
+        display: block
+        position: absolute
+        content: ''
+        width: 2px
+        margin-left: -1px
+        height: 2.5em
+        background-color: $main-fg
+        top: -2.5em
+        left: 50%
 
       &:hover, &:focus
         color: $main-fg
@@ -234,30 +290,6 @@ body
     cite
       margin: .25em 0
       text-align: right
-
-//
-// LEAFLET MAP
-//
-#map
-  $main-fg: $white
-  $main-bg: $dark
-
-  width: 100%
-  height: 40em
-  margin-top: -5.25em
-
-  @include override-colors($main-fg,$main-bg)
-
-  .leaflet-popup-content-wrapper, .leaflet-popup-tip, .leaflet-control, .leaflet-control a
-    background-color: $main-bg
-    color: $main-fg
-
-  #address h6
-    font-family: $header-font-family
-    font-weight: 300
-    font-size: 1.5em
-    text-align: center
-    margin: 0
 
 //
 // ARCHIVE AREA
@@ -294,6 +326,8 @@ body
   $alt-fg: lighten($blue, 15%)
   @include override-colors($main-fg,$main-bg)
 
+  border-radius: 0
+  margin-top: 0
   padding: .5em 0
 
   .row
