--- a/generator/layouts/_about_section.html.erb
+++ b/generator/layouts/_about_section.html.erb
@@ -1,5 +1,6 @@
 <section id="about" class="feature">
-    <div class="row">
+    <div class="row"
+         data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
         <div class="large-12 columns social">
             <a rel="nofollow" href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank" title="Like us on FaceBook" onclick="ga('send', 'event', 'social', 'like')"><i class="icon-like"></i></a>
             <a rel="nofollow" href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="icon-facebook" title="FaceBook discussion group" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
@@ -10,11 +11,13 @@
     </div>
 
     <div class="row">
-        <div class="large-12 columns">
+        <div class="large-12 columns" data-anchor-target="#_about"
+             data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0"
+             data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
             <blockquote>
                 <p>Geek Night is a monthly event to promote sharing of technical knowledge and increase collaboration between geeks in Chennai. It is organized by a passionate group of programmers and sponsored by ThoughtWorks.</p>
 
-                <p><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
+                <p id="_about"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
                 <cite>Geek Night Volunteers</cite>
             </blockquote>
