Revert to system fonts

--- a/css/app.css
+++ b/css/app.css
@@ -369,7 +369,7 @@ body {
   color: #222222;
   padding: 0;
   margin: 0;
-  font-family: Raleway, "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif;
+  font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif;
   font-weight: 300;
   font-style: normal;
   line-height: 1;
@@ -495,7 +495,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Raleway, "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif;
+  font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif;
   font-weight: 300;
   font-style: normal;
   color: #222222;
