--- a/generator/layouts/_footer_section.html.erb
+++ b/generator/layouts/_footer_section.html.erb
@@ -8,6 +8,7 @@
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
                 <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a>,
                 <a rel="nofollow" target="_blank" href="//github.com/Prinzhorn/skrollr">Skrollr</a>,
+                <a rel="nofollow" target="_blank" href="//daneden.me/animate/">Animate</a>,
                 <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a> &amp;
                 <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a>
             </small></p>
