--- a/generator/layouts/_archive_section.html.erb
+++ b/generator/layouts/_archive_section.html.erb
@@ -6,14 +6,12 @@
 
     <div class="row">
         <div class="large-12 columns">
-            <ul class="grid small-block-grid-2 large-block-grid-4">
+            <ul class="grid small-block-grid-3 large-block-grid-6">
                 <% archives.each do |archive| %>
                 <li>
                     <a href=".<%= archive.path %>" data-bottom="transform:rotate(360deg) scale(0)" data--150-bottom="transform:rotate(0deg) scale(1)">
-                        <span class="version">
-                            <%= archive[:edition] %><sup><%= archive[:edition].ordinal %></sup> edition
-                        </span>
-                        <span class="date"><%= Time.parse(archive[:start]).strftime("%b %d") %></span>
+                        <h6><%= Time.parse(archive[:start]).strftime("%b") %></h6>
+                        <h3><%= Time.parse(archive[:start]).strftime("%d") %></h3>
                     </a>
                 </li>
                 <% end %>
