More transitions/effects

--- a/css/app.css
+++ b/css/app.css
@@ -3916,8 +3916,8 @@ button, .button {
       background-color: #00aeef; }
     #archive .grid a h6 {
       color: white;
-      margin: 0;
-      padding-bottom: 0.1em; }
+      line-height: 1.5em;
+      margin: 0; }
       #archive .grid a h6:before, #archive .grid a h6:after {
         content: "\2022";
         display: inline-block; }
@@ -3928,8 +3928,13 @@ button, .button {
     #archive .grid a h3 {
       background-color: white;
       margin: 0;
-      padding: 0.1em 0;
+      line-height: 1.5em;
       border-radius: 0 0 0.25em 0.25em; }
+      #archive .grid a h3 span {
+        display: block;
+        border-top: 1px dashed #b3b3b3;
+        font-size: 0.5em;
+        line-height: 2em; }
 
 #footer {
   color: #a6a6a6;
